--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
       Se puede agregar: (CDN) se puede hacer disponible globalmente una hoja de stilos, se puede agregar mas cosas
     -->
     
-    <title>Administración de Pacientes</title>
+    <title>Turn On!</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Staatliches" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
   </head>
   <body>
